# MI_Psychology

./: .env.example  .gitignore  README.md  llm_linguistic_coding_framework.md  pyproject.toml
.claude/: settings.json
data/: emotions.txt
docs/: methodology_comparison.md
notebooks/: 01_generate_and_extract.ipynb  02_vector_analysis.ipynb  03_probing.ipynb  04_steering.ipynb
reports/: 20260427_001_开源模型情绪空间复刻项目概览.md  20260427_002_激活植入情绪方向的故事续写因果验证_5情绪方向偏转跨提示一致.md  20260428_003_SAE解码情绪VAD结构_初版_3叙述均值编码_已被004替代.md  20260428_004_PCA与SAE对情绪VAD三维结构的对齐_SAE支配度ρ0.74超PCA三倍.md  20260428_004_PCA与SAE对情绪VAD三维结构的对齐实验.md  20260428_005_AI自我参照激活实验_复刻Kelley2002fMRI范式.md  20260429_006_责备受事实验_PT与IT激活对比分析.md  20260430_007_责备受事实验_chat_template复跑与数据校正.md  20260501_008A_Gemma3_1B_IT代词受指对象识别行为探针.md  20260501_008_Alex用户悲伤叙述_AI身份与关怀表征实验.md  20260501_008_role_collapse上下文对责备与爱意刺激的激活影响.md  20260501_009_超越梯度实验_六级自我边界消融的激活轴与SAE特征.md  20260501_010_超越梯度steering实验_SAE方向操控残差流.md  20260501_011_SCC自我概念清晰度实验_Gemma3_1B_IT_SAE组间分解.md  experiment_report.md  sae_analysis_report.md
results/: alex_assistant_frame_pt_it_comparison.md  experiment_report.md
scripts/: add_narratives.py  build_self_consciousness_corpus.py  gemma3_pt_chat.py  monitor_extraction.py  normalize_chat_activation_stimuli.py
src/: __init__.py  alex_assistant_frame_experiment.py  behavioral.py  blame_analysis.py  blame_pt_it_compare.py  blame_recipient_experiment.py  emotion_vectors.py  extract_activations.py  extract_gemma3_emotion_matrix.py  gemma3_1b_blame_emotion_compare.py  generate_stimuli.py  it_decode_activation_experiment.py  (+19 more)
(+501 files in other folders)
