[project]
name = "emotion-mi"
version = "0.1.0"
description = "Replication of Anthropic emotion concepts mechanistic interpretability research"
requires-python = ">=3.11"
dependencies = [
    # Model access & activation extraction
    "anthropic>=0.40.0",
    "transformer-lens>=2.0.0",
    "transformers>=4.40.0",
    "torch>=2.3.0",
    # Data & ML
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    # Notebooks
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    # Utilities
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
